Abschnitt 21: Crashkurs Webentwicklung HTML/CSS und Javascript

--- a/445 - Crashkurs Webentwicklung/HTML/CSS - Separate Datei.html
+++ b/445 - Crashkurs Webentwicklung/HTML/CSS - Separate Datei.html
@@ -21,7 +21,7 @@
                     lacinia turpis. Curabitur vel ultrices eros. Donec commodo facilisis 
                     dignissim. Ut pellentesque porta ligula sodales vestibulum.</p>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus 
+            <p>Lorem <span class=underlined>ipsum dolor</span> sit amet, consectetur adipiscing elit. Vivamus 
                     sit amet semper massa, et efficitur arcu. In vitae ullamcorper urna,
                     non condimentum arcu. Duis quis pellentesque augue. Sed et erat et 
                     eros gravida vehicula at ut arcu. Donec vel dolor vulputate, accumsan 
