--- a/445 - Crashkurs Webentwicklung/HTML/Links.html
+++ b/445 - Crashkurs Webentwicklung/HTML/Links.html
@@ -15,7 +15,9 @@
 
         <a href="https://google.com">Google</a>
 
-        <a href="ndk.jpg" target="_blank"><img src="ndk.jpg" alt="Bild vom NDK"></a>
+        <a href="ndk.jpg" target="_blank"><img 
+            src="/380 - Image Style Transfer/bild.jpg" 
+            alt="Bild vom NDK"></a>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus 
         sit amet semper massa, et efficitur arcu. In vitae ullamcorper urna,
