--- a/445 - Crashkurs Webentwicklung/HTML/CSS - Div und Span.html
+++ b/445 - Crashkurs Webentwicklung/HTML/CSS - Div und Span.html
@@ -7,16 +7,25 @@
 
         <style>
             body {
-                background-color: rgb(200, 200, 200);
+                background-color: rgb(255, 255, 255);
+                font-family: Arial, Helvetica, sans-serif;
+                font-size: 16px;
+                color: rgb(0, 0, 0);
             }
             .container {
                 border: 1px solid blue;
-                background-color: rgb(255, 255, 255);
+                background-color: rgb(219, 190, 190);
+                padding: 20px;
+                margin: 20px;
             }
 
             .highlighted {
-                background-color: yellow;
+                background-color: rgb(173, 244, 155);
             } 
+
+            .underlined {
+                text-decoration: underline;
+            }
         </style>
     </head>
     <body>
@@ -33,7 +42,7 @@
                     lacinia turpis. Curabitur vel ultrices eros. Donec commodo facilisis 
                     dignissim. Ut pellentesque porta ligula sodales vestibulum.</p>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus 
+            <p>Lorem <span class="underlined">dolor sit amet</span>, consectetur adipiscing elit. Vivamus 
                     sit amet semper massa, et efficitur arcu. In vitae ullamcorper urna,
                     non condimentum arcu. Duis quis pellentesque augue. Sed et erat et 
                     eros gravida vehicula at ut arcu. Donec vel dolor vulputate, accumsan 
@@ -45,6 +54,5 @@
                     lacinia turpis. Curabitur vel ultrices eros. Donec commodo facilisis 
                     dignissim. Ut pellentesque porta ligula sodales vestibulum.</p>
         </div>        
-
     </body>
 </html>
