--- a/445 - Crashkurs Webentwicklung/HTML/CSS - Erste Schritte.html
+++ b/445 - Crashkurs Webentwicklung/HTML/CSS - Erste Schritte.html
@@ -12,10 +12,12 @@
         <h4 style="color: blue; text-decoration: underline">Überschrift 4</h4>
         <h5 style="background-color:gold;">Überschrift 5</h5>
         <h6 style="background-color: rgb(73, 130, 252);">Überschrift 6</h6>
-
+        <h7 style="background-color: rgb(7, 25, 65); color: rgb(169, 140, 140);">Überschrift 7</h7>
+        <br><br>
         <a href="https://google.com">Google</a>
 
-        <a href="ndk.jpg" target="_blank"><img src="ndk.jpg" alt="Bild vom NDK"></a>
+        <a href="/380 - Image Style Transfer/bild.jpg" target="_blank">
+        <img src="/380 - Image Style Transfer/bild.jpg" alt="Bild vom NDK"></a>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus 
         sit amet semper massa, et efficitur arcu. In vitae ullamcorper urna,
